.k8s/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend-artlif
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-artlif
  template:
    metadata:
      labels:
        app: frontend-artlif
    spec:
      containers:
      - name: frontend-artlifcontainer
        image: anabasniak/artlif-frontend:latest
        ports:
        - containerPort: 5173
