.k8s/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-artlif
spec:
  type: NodePort
  selector:
    app: frontend-artlif
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
      nodePort: 30000
