.k8s/postegres.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine #
        ports:
        - containerPort: 5432
        volumeMounts:
          mountPath: /var/lib/postgresql/data
          name: postgres-database
      volumes:
      - name: postgres-database
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
